--- a/HW5/HW5.ipynb
+++ b/HW5/HW5.ipynb
@@ -708,13 +708,13 @@
     "\n",
     "from atari_emulator import AtariEmulator\n",
     "from ale_python_interface import ALEInterface\n",
-    "import imagio\n",
+    "import imageio\n",
     "\n",
     "BIN = \"atari_roms/breakout.bin\"\n",
     "noops = 30\n",
     "test_count = 1\n",
     "\n",
-    "writer = imagio.get_writer('breakout.gif', fps = 30)\n",
+    "writer = imageio.get_writer('breakout.gif', fps = 30)\n",
     "\n",
     "def append_frame(frame):\n",
     "    writer.append_data(frame)\n",
