--- a/HW5/HW5.ipynb
+++ b/HW5/HW5.ipynb
@@ -92,7 +92,7 @@
     "\n",
     "    ## >>>>>>>>>>>>>>>>>>>>>code required<<<<<<<<<<<<<<<<<<<<<<<<<<##\n",
     "    raise Exception(\"At most two line of code is needed here. \\\n",
-    "    Refer to the secton Bellman Equation mentioned above. \\\n",
+    "    Refer to the second Bellman Equation mentioned above. \\\n",
     "    Solve the Q-function by using reward function self.M.R, \\\n",
     "    transition function self.M.T \\\n",
     "    and value function V.\")\n",
